--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Montres de Luxe</title>
   <style>
     body {
@@ -15,6 +15,27 @@
       max-width: 800px;
       margin: auto;
       padding: 10px;
+      position: relative;
+    }
+
+    .navigation {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .navigation button {
+      font-size: 1.5em;
+      padding: 10px 20px;
+      margin: 0 20px;
+      cursor: pointer;
+    }
+
+    .montre {
+      display: none;
+    }
+
+    .montre.active {
+      display: block;
     }
 
     .main-display {
@@ -22,19 +43,17 @@
       height: 400px;
       border-radius: 10px;
       overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      background: url('images/montre1-2.avif') center/cover no-repeat;
+      background-size: cover;
+      background-position: center;
       cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
 
     .main-display::after {
       content: "";
       position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background: rgba(0, 0, 0, 0.4);
+      inset: 0;
+      background: rgba(0,0,0,0.4);
     }
 
     .info {
@@ -43,7 +62,7 @@
       color: white;
       top: 20px;
       left: 20px;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0,0,0,0.5);
       padding: 15px;
       border-radius: 10px;
       max-width: 80%;
@@ -51,12 +70,6 @@
 
     .info h1 {
       margin: 0 0 10px;
-      font-size: 1.8em;
-    }
-
-    .info p {
-      margin: 5px 0;
-      font-size: 1em;
     }
 
     .gallery {
@@ -70,11 +83,11 @@
       height: 120px;
       object-fit: cover;
       border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
       cursor: pointer;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     }
 
-    /* MODAL */
+    /* MODALE */
     .modal {
       display: none;
       position: fixed;
@@ -106,104 +119,180 @@
       color: white;
       font-size: 2em;
       cursor: pointer;
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0,0,0,0.6);
       padding: 10px;
       border-radius: 50%;
       border: none;
       z-index: 1000;
     }
 
-    .close {
-      top: 10px;
-      right: 20px;
-    }
+    .close { top: 10px; right: 20px; }
+    .prev { top: 50%; left: -50px; transform: translateY(-50%); }
+    .next { top: 50%; right: -50px; transform: translateY(-50%); }
 
-    .prev {
-      top: 50%;
-      left: -50px;
-      transform: translateY(-50%);
-    }
 
-    .next {
-      top: 50%;
-      right: -50px;
-      transform: translateY(-50%);
-    }
+    .thumbnail-strip {
+  display: flex;
+  gap: 10px;
+  overflow-x: auto;
+  padding: 15px 0;
+  margin-top: 30px;
+  border-top: 1px solid #ccc;
+}
 
-    @media (max-width: 768px) {
-      .prev, .next {
-        left: 10px;
-        right: 10px;
-      }
-    }
+.thumbnail {
+  flex: 0 0 auto;
+  width: 120px;
+  height: 80px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.thumbnail:hover {
+  transform: scale(1.05);
+}
+
+.thumbnail img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- Grande image cliquable -->
-    <div class="main-display" onclick="openModal(1)">
-      <div class="info">
-        <h1>Montre Zenith Elite</h1>
-        <p>Prix : 8 500 €</p>
-        <p>Mouvement automatique, boîtier titane, bracelet cuir italien, étanche 50 m.</p>
+    <div class="navigation">
+      <button onclick="changeMontre(-1)">⟵ Précédente</button>
+      <button onclick="changeMontre(1)">Suivante ⟶</button>
+    </div>
+
+    <!-- Montre 1 -->
+    <div class="montre active" id="montre-0">
+      <div class="main-display" style="background-image: url('images/montre1-2.avif');" onclick="openModal(0, 1)">
+        <div class="info">
+          <h1>Montre Zenith Elite</h1>
+          <p>Prix : 8 500 €</p>
+          <p>Titane, automatique, cuir italien.</p>
+        </div>
+      </div>
+      <div class="gallery">
+        <img src="images/montre1-1.avif" onclick="openModal(0, 0)">
+        <img src="images/montre1-3.avif" onclick="openModal(0, 2)">
+        <img src="images/montre1-4.avif" onclick="openModal(0, 3)">
       </div>
     </div>
 
-    <!-- Miniatures -->
-    <div class="gallery">
-      <img src="images/montre1-1.avif" alt="Vue 1" onclick="openModal(0)">
-      <img src="images/montre1-3.avif" alt="Vue 3" onclick="openModal(2)">
-      <img src="images/montre1-4.avif" alt="Vue 4" onclick="openModal(3)">
+    <!-- Montre 2 -->
+    <div class="montre" id="montre-1">
+      <div class="main-display" style="background-image: url('images/montre2-2.avif');" onclick="openModal(1, 1)">
+        <div class="info">
+          <h1>Rolex Submariner</h1>
+          <p>Prix : 12 000 €</p>
+          <p>Acier, lunette céramique, étanche 300 m.</p>
+        </div>
+      </div>
+      <div class="gallery">
+        <img src="images/montre2-1.avif" onclick="openModal(1, 0)">
+        <img src="images/montre2-3.avif" onclick="openModal(1, 2)">
+        <img src="images/montre2-4.avif" onclick="openModal(1, 3)">
+      </div>
+    </div>
+    <!-- Montre 2 -->
+    <div class="montre" id="montre-2">
+      <div class="main-display" style="background-image: url('images/montre3-2.avif');" onclick="openModal(2, 1)">
+        <div class="info">
+          <h1> Breitling Superocean</h1>
+          <p>Prix : 5 950 €</p>
+          <p>Heritage B20 Automatic 42</p>
+        </div>
+        
+
+      </div>
+      <div class="gallery">
+        <img src="images/montre3-1.avif" onclick="openModal(2, 0)">
+        <img src="images/montre3-3.avif" onclick="openModal(2, 2)">
+        <img src="images/montre3-4.avif" onclick="openModal(2, 3)">
+      </div>
+    </div>
+  
+  <!-- MINIATURES DE MONTRES EN BAS -->
+    <div class="thumbnail-strip">
+      <div class="thumbnail" onclick="showMontre(0)">
+        <img src="images/montre1-2.avif" alt="Montre 1" />
+      </div>
+      <div class="thumbnail" onclick="showMontre(1)">
+        <img src="images/montre2-2.avif" alt="Montre 2" />
+      </div>
+      <div class="thumbnail" onclick="showMontre(2)">
+        <img src="images/montre3-2.avif" alt="Montre 3" />
+      </div>
     </div>
   </div>
 
-  <!-- Modale avec navigation -->
+  <!-- MODALE -->
   <div class="modal" id="imageModal">
     <div class="modal-content">
       <span class="close" onclick="closeModal()">✖</span>
       <span class="prev" onclick="prevImage()">◀</span>
-      <img id="modalImage" src="" alt="Image de montre">
+      <img id="modalImage" src="">
       <span class="next" onclick="nextImage()">▶</span>
     </div>
   </div>
 
   <script>
-    const images = [
-      "images/montre1-1.avif", // index 0
-      "images/montre1-2.avif", // index 1 = image principale
-      "images/montre1-3.avif", // index 2
-      "images/montre1-4.avif"  // index 3
+    const montres = [
+      ["images/montre1-1.avif", "images/montre1-2.avif", "images/montre1-3.avif", "images/montre1-4.avif"],
+      ["images/montre2-1.avif", "images/montre2-2.avif", "images/montre2-3.avif", "images/montre2-4.avif"],
+      ["images/montre3-1.avif", "images/montre3-2.avif", "images/montre3-3.avif", "images/montre3-4.avif"]
     ];
 
-    let currentIndex = 0;
+    let currentMontreIndex = 0;
+    let currentImageIndex = 0;
 
-    function openModal(index) {
-      currentIndex = index;
-      document.getElementById('modalImage').src = images[currentIndex];
-      document.getElementById('imageModal').style.display = 'flex';
+    function changeMontre(direction) {
+      document.querySelector(`#montre-${currentMontreIndex}`).classList.remove('active');
+      currentMontreIndex = (currentMontreIndex + direction + montres.length) % montres.length;
+      document.querySelector(`#montre-${currentMontreIndex}`).classList.add('active');
+    }
+
+    function openModal(montreIndex, imageIndex) {
+      currentMontreIndex = montreIndex;
+      currentImageIndex = imageIndex;
+      document.getElementById("modalImage").src = montres[montreIndex][imageIndex];
+      document.getElementById("imageModal").style.display = "flex";
     }
 
     function closeModal() {
-      document.getElementById('imageModal').style.display = 'none';
+      document.getElementById("imageModal").style.display = "none";
     }
 
     function nextImage() {
-      currentIndex = (currentIndex + 1) % images.length;
-      document.getElementById('modalImage').src = images[currentIndex];
+      currentImageIndex = (currentImageIndex + 1) % 4;
+      document.getElementById("modalImage").src = montres[currentMontreIndex][currentImageIndex];
     }
 
     function prevImage() {
-      currentIndex = (currentIndex - 1 + images.length) % images.length;
-      document.getElementById('modalImage').src = images[currentIndex];
+      currentImageIndex = (currentImageIndex - 1 + 4) % 4;
+      document.getElementById("modalImage").src = montres[currentMontreIndex][currentImageIndex];
     }
 
-    // Fermer si clic en dehors
+    // Fermer la modale si clic dehors
     window.onclick = function(event) {
-      const modal = document.getElementById('imageModal');
-      if (event.target === modal) {
-        closeModal();
-      }
-    }
+      const modal = document.getElementById("imageModal");
+      if (event.target === modal) closeModal();
+    };
+
+    function showMontre(index) {
+  document.querySelector(`#montre-${currentMontreIndex}`).classList.remove('active');
+  currentMontreIndex = index;
+  document.querySelector(`#montre-${currentMontreIndex}`).classList.add('active');
+}
+
   </script>
 </body>
 </html>
