--- a/index.html
+++ b/index.html
@@ -3,236 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Montres de Luxe</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background-color: #f0f0f0;
-    }
+  <title>Les Montres de Gotin</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+  <script src="js/script.js" defer></script>
 
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 10px;
-      position: relative;
-    }
-
-    .navigation {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .navigation button {
-      font-size: 1.5em;
-      padding: 10px 20px;
-      margin: 0 20px;
-      cursor: pointer;
-    }
-
-    .montre {
-      display: none;
-    }
-
-    .montre.active {
-      display: block;
-    }
-
-    .main-display {
-      position: relative;
-      height: 400px;
-      border-radius: 10px;
-      overflow: hidden;
-      background-size: cover;
-      background-position: center;
-      cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
-
-    .main-display::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.4);
-    }
-
-    .info {
-      position: absolute;
-      z-index: 2;
-      color: white;
-      top: 20px;
-      left: 20px;
-      background: rgba(0,0,0,0.5);
-      padding: 15px;
-      border-radius: 10px;
-      max-width: 80%;
-    }
-
-    .info h1 {
-      margin: 0 0 10px;
-    }
-
-    .gallery {
-      display: flex;
-      margin-top: 15px;
-      gap: 10px;
-    }
-
-    .gallery img {
-      flex: 1;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 8px;
-      cursor: pointer;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    }
-
-    /* MODALE */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 999;
-      left: 0;
-      top: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-content {
-      position: relative;
-      max-width: 90%;
-      max-height: 90%;
-    }
-
-    .modal-content img {
-      width: 100%;
-      max-height: 80vh;
-      object-fit: contain;
-      border-radius: 10px;
-    }
-
-    .close, .prev, .next {
-      position: absolute;
-      color: white;
-      font-size: 2em;
-      cursor: pointer;
-      background: rgba(0,0,0,0.6);
-      padding: 10px;
-      border-radius: 50%;
-      border: none;
-      z-index: 1000;
-    }
-
-    .close { top: 10px; right: 20px; }
-    .prev { top: 50%; left: -50px; transform: translateY(-50%); }
-    .next { top: 50%; right: -50px; transform: translateY(-50%); }
-
-
-    .thumbnail-strip {
-  display: flex;
-  gap: 10px;
-  overflow-x: auto;
-  padding: 15px 0;
-  margin-top: 30px;
-  border-top: 1px solid #ccc;
-}
-
-.thumbnail {
-  flex: 0 0 auto;
-  width: 120px;
-  height: 80px;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-  cursor: pointer;
-  transition: transform 0.2s;
-}
-
-.thumbnail:hover {
-  transform: scale(1.05);
-}
-
-.thumbnail img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
-
-  </style>
 </head>
 <body>
   <div class="container">
-    <div class="navigation">
-      <button onclick="changeMontre(-1)">⟵ Précédente</button>
-      <button onclick="changeMontre(1)">Suivante ⟶</button>
-    </div>
-
+   
+  <h1 style="text-align:center; font-size:2.5em; margin-bottom:30px; color:#FFD700; letter-spacing:2px; text-shadow:1px 1px 8px #000;">Les Montres de Gotin</h1>
     <!-- Montre 1 -->
-    <div class="montre active" id="montre-0">
-      <div class="main-display" style="background-image: url('images/montre1-2.avif');" onclick="openModal(0, 1)">
-        <div class="info">
-          <h1>Montre Zenith Elite</h1>
-          <p>Prix : 8 500 €</p>
-          <p>Titane, automatique, cuir italien.</p>
-        </div>
-      </div>
-      <div class="gallery">
-        <img src="images/montre1-1.avif" onclick="openModal(0, 0)">
-        <img src="images/montre1-3.avif" onclick="openModal(0, 2)">
-        <img src="images/montre1-4.avif" onclick="openModal(0, 3)">
-      </div>
-    </div>
-
-    <!-- Montre 2 -->
-    <div class="montre" id="montre-1">
-      <div class="main-display" style="background-image: url('images/montre2-2.avif');" onclick="openModal(1, 1)">
-        <div class="info">
-          <h1>Rolex Submariner</h1>
-          <p>Prix : 12 000 €</p>
-          <p>Acier, lunette céramique, étanche 300 m.</p>
-        </div>
-      </div>
-      <div class="gallery">
-        <img src="images/montre2-1.avif" onclick="openModal(1, 0)">
-        <img src="images/montre2-3.avif" onclick="openModal(1, 2)">
-        <img src="images/montre2-4.avif" onclick="openModal(1, 3)">
-      </div>
-    </div>
-    <!-- Montre 2 -->
-    <div class="montre" id="montre-2">
-      <div class="main-display" style="background-image: url('images/montre3-2.avif');" onclick="openModal(2, 1)">
-        <div class="info">
-          <h1> Breitling Superocean</h1>
-          <p>Prix : 5 950 €</p>
-          <p>Heritage B20 Automatic 42</p>
-        </div>
-        
-
-      </div>
-      <div class="gallery">
-        <img src="images/montre3-1.avif" onclick="openModal(2, 0)">
-        <img src="images/montre3-3.avif" onclick="openModal(2, 2)">
-        <img src="images/montre3-4.avif" onclick="openModal(2, 3)">
-      </div>
-    </div>
+   <div class="container">
   
-  <!-- MINIATURES DE MONTRES EN BAS -->
-    <div class="thumbnail-strip">
-      <div class="thumbnail" onclick="showMontre(0)">
-        <img src="images/montre1-2.avif" alt="Montre 1" />
-      </div>
-      <div class="thumbnail" onclick="showMontre(1)">
-        <img src="images/montre2-2.avif" alt="Montre 2" />
-      </div>
-      <div class="thumbnail" onclick="showMontre(2)">
-        <img src="images/montre3-2.avif" alt="Montre 3" />
-      </div>
-    </div>
+
+  <div id="montres-container"></div>
+
+  <div class="thumbnail-strip" id="thumbnail-strip"></div>
+
+<div class="navigation">
+    <button onclick="changeMontre(-1)">⟵ Précédente</button>
+    <button onclick="changeMontre(1)">Suivante ⟶</button>
   </div>
+
+</div>
+
+
 
   <!-- MODALE -->
   <div class="modal" id="imageModal">
@@ -244,55 +41,11 @@
     </div>
   </div>
 
-  <script>
-    const montres = [
-      ["images/montre1-1.avif", "images/montre1-2.avif", "images/montre1-3.avif", "images/montre1-4.avif"],
-      ["images/montre2-1.avif", "images/montre2-2.avif", "images/montre2-3.avif", "images/montre2-4.avif"],
-      ["images/montre3-1.avif", "images/montre3-2.avif", "images/montre3-3.avif", "images/montre3-4.avif"]
-    ];
 
-    let currentMontreIndex = 0;
-    let currentImageIndex = 0;
-
-    function changeMontre(direction) {
-      document.querySelector(`#montre-${currentMontreIndex}`).classList.remove('active');
-      currentMontreIndex = (currentMontreIndex + direction + montres.length) % montres.length;
-      document.querySelector(`#montre-${currentMontreIndex}`).classList.add('active');
-    }
-
-    function openModal(montreIndex, imageIndex) {
-      currentMontreIndex = montreIndex;
-      currentImageIndex = imageIndex;
-      document.getElementById("modalImage").src = montres[montreIndex][imageIndex];
-      document.getElementById("imageModal").style.display = "flex";
-    }
-
-    function closeModal() {
-      document.getElementById("imageModal").style.display = "none";
-    }
-
-    function nextImage() {
-      currentImageIndex = (currentImageIndex + 1) % 4;
-      document.getElementById("modalImage").src = montres[currentMontreIndex][currentImageIndex];
-    }
-
-    function prevImage() {
-      currentImageIndex = (currentImageIndex - 1 + 4) % 4;
-      document.getElementById("modalImage").src = montres[currentMontreIndex][currentImageIndex];
-    }
-
-    // Fermer la modale si clic dehors
-    window.onclick = function(event) {
-      const modal = document.getElementById("imageModal");
-      if (event.target === modal) closeModal();
-    };
-
-    function showMontre(index) {
-  document.querySelector(`#montre-${currentMontreIndex}`).classList.remove('active');
-  currentMontreIndex = index;
-  document.querySelector(`#montre-${currentMontreIndex}`).classList.add('active');
-}
-
-  </script>
+  <footer class="footer">
+  <p>Pour tout renseignement : <a href="mailto:robic@gmail.com">robic@gmail.com</a> — <a href="tel:+33326156546">+33 3 26 15 65 46</a></p>
+</footer>
+ 
+  </div>
 </body>
 </html>
