--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -8,50 +9,57 @@
   <link rel="stylesheet" href="styles/style.css">
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
   <script src="js/script.js" defer></script>
-
 </head>
+
 <body>
   <div class="container">
-   
-  <h1 style="text-align:center; font-size:2.5em; margin-bottom:30px; color:#FFD700; letter-spacing:2px; text-shadow:1px 1px 8px #000;">Les Montres de Gotin</h1>
-    <!-- Montre 1 -->
-   <div class="container">
-  
-<div id="filters" class="filters">
-  <button onclick="filterMontres('all')">Tous les produits</button>
-  <button onclick="filterMontres('Montres')">Montres</button>
-  <button onclick="filterMontres('Chaussures')">Chaussures</button>
-  <button onclick="filterMontres('Autres')">Autres</button>
-</div>
+    <h1 style="text-align:center; font-size:2.5em; margin-bottom:30px; color:#FFD700; letter-spacing:2px; text-shadow:1px 1px 8px #000;">Les Montres de Gotin</h1>
+    <div class="main-layout">
+      <!-- COLONNE GAUCHE : Filtres -->
+      <div class="left-panel">
+        <h2>Catégories</h2>
+        <div id="filters" class="filters">
+          <button onclick="filterMontres('all')">Tous</button>
+          <button onclick="filterMontres('Montres')">Montres</button>
+          <button onclick="filterMontres('Chaussures')">Chaussures</button>
+          <button onclick="filterMontres('Autres')">Autres</button>
+        </div>
+      </div>
 
-  <div id="montres-container"></div>
+      <!-- COLONNE CENTRALE : Produit -->
+      <div class="center-panel">
+        <div id="montres-container"></div>
+        <div class="navigation">
+          <button onclick="changeMontre(-1)">⟵ Précédente</button>
+          <button onclick="changeMontre(1)">Suivante ⟶</button>
+        </div>
+      </div>
 
-  
-
-<div class="navigation">
-    <button onclick="changeMontre(-1)">⟵ Précédente</button>
-    <button onclick="changeMontre(1)">Suivante ⟶</button>
-  </div>
-<div class="thumbnail-strip" id="thumbnail-strip"></div>
-</div>
-
-
-
-  <!-- MODALE -->
-  <div class="modal" id="imageModal">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal()">✖</span>
-      <span class="prev" onclick="prevImage()">◀</span>
-      <img id="modalImage" src="">
-      <span class="next" onclick="nextImage()">▶</span>
+      <!-- COLONNE DROITE : Miniatures -->
+      <div class="right-panel">
+        <h2>Les autres<br>produits</h2>
+        <div class="thumbnail-strip" id="thumbnail-strip"></div>
+      </div>
     </div>
-  </div>
 
+    <!-- Modale -->
+    <div class="modal" id="imageModal">
+      <div class="modal-content">
+        <span class="close" onclick="closeModal()">✖</span>
+        <span class="prev" onclick="prevImage()">◀</span>
+        <img id="modalImage" src="">
+        <span class="next" onclick="nextImage()">▶</span>
+      </div>
+    </div>
 
-  <footer class="footer">
-  <p>Pour tout renseignement : <a href="mailto:robic@gmail.com">robic@gmail.com</a> — <a href="tel:+33326156546">+33 3 26 15 65 46</a></p>
-</footer>
- 
+    <!-- Pied de page -->
+    <footer class="footer">
+      <p>
+        Pour tout renseignement :
+        <a href="mailto:robic@gmail.com">robic@gmail.com</a> —
+        <a href="tel:+33326156546">+33 3 26 15 65 46</a>
+      </p>
+    </footer>
   </div>
 </body>
 </html>
