--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="container">
-    <h1 style="text-align:center; font-size:2.5em; margin-bottom:30px; color:#FFD700; letter-spacing:2px; text-shadow:1px 1px 8px #000;">Les Montres de Gotin</h1>
+    <h1>Les Montres de Gotin</h1>
     <div class="main-layout">
       <!-- COLONNE GAUCHE : Filtres -->
       <div class="left-panel">
